--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>Apollo Systems Perú</title>
 </head>
 <body>
-<h1>Apollo Systems Perú</h1>
+<h1 align="center">Apollo Systems Perú</h1>
+<h2 align="center">Sitio Web en Mantenimiento</h2>
+<p align="center"><img src="images/mantenimiento.jpg" alt="En mantenimiento" /></p>
 </body>
 </html>
